# local-agent-runtime

./: .SYSTEM_STATUS.json  .gitignore  .test-autonomy.py  AGENTS.md  AGENT_EMERGENCY_HANDOFF.md  AGENT_SYSTEM_REPORT.md  AGENT_TODO.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMY.md  AUTO_RUN_CONFIG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SESSION_STATUS.md  COMPLETE_STATUS.md  COMPLETION_STRATEGY.md  CONTRIBUTING.md  DASHBOARD_INTEGRATION.md  DELIVERY_SUMMARY.md  EXTREME_CLAUDE_PROTOCOL.md  FINAL_SESSION_REPORT.md  FINAL_STATUS.txt  FINAL_STATUS_TODAY.md  HANDOFF.md  HANDOFF_SUMMARY.md  Local  MASTER_PLAN.md  NEXUS_PROGRESS_DASHBOARD.md  P0_INTEGRATION_COMPLETE.md  PRODUCTION_UPGRADE_PLAN.md  REACT_COMPONENT_GUIDE.md  README.md  REDDIT_ENGAGEMENT_CONTENT.md  REVIEW.md  SESSION_EXECUTION_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-03-27.md  SYSTEM_24_7_STATUS.md  SYSTEM_AUTONOMY_MANIFEST.md  SYSTEM_COMPLETE_RECOVERY_20260327.md  SYSTEM_DIAGNOSTICS.md  (+17 more)
.claude/: AGENT_INTEGRATION_GUIDE.md  AUTONOMY_COMPLETE.md  CLAUDE.md  CLAUDE_CORE.md  CLAUDE_SESSION_EXTREME_PLAN.md  DELIVERABLES.md  EXTREME_CLAUDE_SESSION_RULES.md  FULL_ENFORCEMENT_INTEGRATION.md  POLICY_ENFORCEMENT_GUIDE.md  POLICY_ENFORCEMENT_SUMMARY.md  PROJECT_ROADMAP_2026Q1.md  PROJECT_TASKS.md  SYSTEM_UNBLOCK_PLAN.md  TOKEN_EFFICIENCY_SUMMARY.md  (+2 more)
local-agents/templates/python-cli/: README.md  pyproject.toml
local-agents/templates/python-cli/.github/workflows/: ci.yml
local-agents/templates/python-cli/src/{{name}}/: __init__.py  cli.py  core.py
local-agents/templates/python-cli/tests/: test_cli.py
(+785 files in other folders)
